<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/movie_poster"
            tools:src="@color/colorAccent"/>

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@id/iv_movie_poster"
            android:textSize="19sp"
            android:textStyle="bold"
            android:text="@string/movie_title"/>

        <TextView
            android:id="@+id/tv_movie_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@id/iv_movie_poster"
            android:layout_below="@id/tv_movie_title"
            android:textSize="16sp"
            android:text="@string/release_title"/>

        <TextView
            android:id="@+id/tv_movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@id/iv_movie_poster"
            android:layout_below="@id/tv_movie_release"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/overview_title"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>

